--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "private": true,
   "scripts": {
     "start": "nodemon -e js,json,graphql",
-    "lint": "eslint src/index.js",
-    "lint:fix": "eslint --fix src/index.js"
+    "lint": "eslint src",
+    "lint:fix": "eslint --fix src"
   },
   "main": "src/index.js",
   "dependencies": {
-    "apollo-server": "^2.10.0",
+    "apollo-server-express": "^2.10.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "graphql": "^14.6.0",
+    "graphql-playground-middleware-express": "^1.7.12",
+    "mongodb": "^3.5.2",
     "nodemon": "^2.0.2"
   },
   "devDependencies": {
