--- a/package.json
+++ b/package.json
@@ -12,11 +12,9 @@
     "express": "^4.17.1",
     "graphql": "^14.6.0",
     "graphql-playground-middleware-express": "^1.7.12",
-    "graphql-request": "^1.8.2",
     "mongodb": "^3.5.2",
     "node-fetch": "^2.6.0",
-    "nodemon": "^2.0.2",
-    "react": "^16.12.0"
+    "nodemon": "^2.0.2"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
